--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1> Hello World </h1>
-<p> My slides at ICIAM can be downloaded [here](/slides/iciam-slides-yuejiazhang.pdf). </p>
+<p> My slides at ICIAM can be downloaded <a href="slides/iciam-slides-yuejiazhang.pdf">here</a>. </p>
