--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> Hello World </h1>
 <p> My slides at ICIAM can be downloaded <a href="slides/iciam-slides-yuejiazhang.pdf">here</a>. </p>
+<p> My slides for comp chem seminar can be downloaded <a href="slides/talk-slides.pdf">here</a>. </p>
